# oozoofrog-plugins

./: .gitignore  CLAUDE.md  README.md  version.json
.claude/: settings.json
.claude-plugin/: marketplace.json
docs/research/claude-skill-routing/: 01-problem-framing.md  02-skill-inventory.md  03-hypotheses-and-design.md  04-prompt-corpus.md  05-evaluation-rubric.md  06-experiment-log.md  README.md
docs/research/codex-research/: 2026-04-02-heycx-bugs-validation-summary.md
docs/superpowers/plans/: 2026-03-25-codex-delegate.md  2026-03-26-apple-craft-v2.md  2026-03-29-codex-research.md  2026-03-29-designer-2way-split.md  2026-03-30-api-learn.md
docs/superpowers/specs/: 2026-03-25-codex-delegate-design.md  2026-03-26-apple-craft-v2-design.md  (+3 more)
plugins/agent-context/: README.md
plugins/api-learn/: README.md
plugins/app-automation/: .mcp.json  README.md
plugins/apple-craft/: README.md
plugins/codex-delegate/: README.md
plugins/context-architect/: README.md
plugins/design-craft/: README.md
plugins/git-workflow/: README.md
plugins/gpt-research/: README.md
plugins/hey-codex/: README.md
plugins/llm-wiki/: README.md
plugins/macos-release/: README.md
plugins/plugin-doctor/: README.md
plugins/release-cycle/: README.md
plugins/session-viewer/: README.md
plugins/session-viewer/skills/session-viewer/src/: Cargo.toml
plugins/session-viewer/skills/session-viewer/src/src/: data.rs  main.rs  query.rs  template.html  tui.rs  web.rs
plugins/swift-master/: README.md
plugins/yoda/: README.md
scripts/: check-version-bump.sh  version-bump.sh
(+219 files in other folders)
