[package]
name = "session-viewer"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "session-viewer"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
chrono = { version = "0.4", default-features = false, features = ["clock", "serde"] }
dirs = "5"
clap = { version = "4", features = ["derive"] }
regex = "1"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
